# nucleo-ui

./: Cargo.toml  README.md  default.nix  flake.nix
src/: app.rs  cli.rs  directory.rs  event.rs  handler.rs  lib.rs  main.rs  model.rs  tui.rs  ui.rs  walker.rs
