[package]
name = "nucleo-ui"
version = "0.1.2"
authors = ["Monish Thirukkumaran <monish.thir@gmail.com>"]
license = "MIT"
edition = "2021"
readme = "README.md"
description = "A simple TUI wrapper around the nucleo fuzzy matching crate"
repository = "https://github.com/monishth/nucleo-ui"
exclude = ["assets/*"]

[dependencies]
clap = { version = "4.5.4", features = ["derive", "cargo"] }
color-eyre = { version = "0.6.3", default-features = false }
crossterm = "0.27.0"
nucleo = "0.5.0"
ratatui = "0.26.1"
walkdir = "2.5.0"

[[bin]]
name = "nucleo"
path = "src/main.rs"
